# Logging_system

./: .gitignore  CMakeLists.txt  README.md  README_Phase_02_Complete.md  class-diagram.mermaid
app/: CMakeLists.txt  main.cpp  telemetry_app
inc/: ConsoleSinkImpl.hpp  FileSinkImpl.hpp  FileTelemetrySourceImpl.hpp  ILogSink.hpp  LogManager.hpp  SafeFile.hpp  SocketTelemetrySourceImpl.hpp
inc/enums/: LogSinkType.hpp  SeverityLevel.hpp  TelemetrySource.hpp
inc/formatter/: LogFormatter.hpp  LogFormatter.tpp
inc/formatter/policies/: CpuPolicy.hpp  GpuPolicy.hpp  RamPolicy.hpp
inc/logger/: LogManager.hpp  LogMessage.hpp  RingBuffer.hpp
inc/raii/: SafeFile.hpp  SafeSocket.hpp
inc/sink/: ConsoleSinkImpl.hpp  FileSinkImpl.hpp  ILogSink.hpp  LogSinkFactory.hpp
inc/sources/: FileTelemetrySourceImpl.hpp  ITelemetrySource.hpp  SocketTelemetrySourceImpl.hpp
scripts/: SOCKET_TESTING_README.md  simple_telemetry_server.sh
src/: CMakeList.txt  CMakeLists.txt  ConsoleSinkImpl.cpp  FileSinkImpl.cpp  FileTelemetrySourceImpl.cpp  LogManager.cpp  LogMessage.cpp  SafeFile.cpp  SafeSocket.cpp  SocketTelemetrySourceImpl.cpp
src/logger/: LogManager.cpp  LogMessage.cpp
src/raii/: SafeFile.cpp  SafeSocket.cpp
src/sink/: ConsoleSinkImpl.cpp  FileSinkImpl.cpp  LogSinkFactory.cpp
src/sources/: FileTelemetrySourceImpl.cpp  SocketTelemetrySourceImpl.cpp
